Added visitor pattern example code