@@ -9,6 +9,7 @@
     <version>0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
+
     <name>${project.groupId}:${project.artifactId}</name>
     <description>Object-oriented design pattern java implementation sample code</description>
     <url>https://github.com/BrandonBurrus/java-design-patterns</url>
@@ -33,8 +34,9 @@
     </developers>
 
     <properties>
-        <maven.compiler.source>14</maven.compiler.source>
-        <maven.compiler.target>14</maven.compiler.target>
+        <maven.compiler.source>15</maven.compiler.source>
+        <maven.compiler.target>15</maven.compiler.target>
+        <java.version>15</java.version>
     </properties>
 
     <dependencies>
@@ -44,5 +46,22 @@
             <version>30.1-jre</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
+                <configuration>
+                    <release>15</release>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 
 </project>
